// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Accordion /> snapshot 1`] = `
<div>
  <div
    class="flex flex-wrap gap-2"
  >
    <div
      class="collapse bg-base-200 accordion-type-arrow"
    >
      <input
        aria-label="Accordion item 1"
        name="test"
        type="radio"
      />
      <div
        class="collapse-title text-xl font-medium"
      >
        Header 
        0
      </div>
      <div
        class="collapse-content"
      >
        <p>
          Body
        </p>
      </div>
    </div>
    <div
      class="collapse bg-base-200 accordion-type-arrow"
    >
      <input
        aria-label="Accordion item 2"
        name="test"
        type="radio"
      />
      <div
        class="collapse-title text-xl font-medium"
      >
        Header 
        1
      </div>
      <div
        class="collapse-content"
      >
        <p>
          Body
        </p>
      </div>
    </div>
    <div
      class="collapse bg-base-200 accordion-type-arrow"
    >
      <input
        aria-label="Accordion item 3"
        name="test"
        type="radio"
      />
      <div
        class="collapse-title text-xl font-medium"
      >
        Header 
        2
      </div>
      <div
        class="collapse-content"
      >
        <p>
          Body
        </p>
      </div>
    </div>
    <div
      class="collapse bg-base-200 accordion-type-arrow"
    >
      <input
        aria-label="Accordion item 4"
        name="test"
        type="radio"
      />
      <div
        class="collapse-title text-xl font-medium"
      >
        Header 
        3
      </div>
      <div
        class="collapse-content"
      >
        <p>
          Body
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> snapshot all props 1`] = `
<div>
  <div
    class="flex flex-wrap join join-vertical w-full"
  >
    <div
      class="collapse bg-base-200 accordion-type-plus join-item border border-base-300"
    >
      <input
        aria-label="Accordion item 1"
        name="test"
        type="checkbox"
      />
      <div
        class="collapse-title text-xl font-medium"
      >
        Header 
        0
      </div>
      <div
        class="collapse-content"
      >
        <p>
          Body
        </p>
      </div>
    </div>
    <div
      class="collapse bg-base-200 accordion-type-plus join-item border border-base-300"
    >
      <input
        aria-label="Accordion item 2"
        name="test"
        type="checkbox"
      />
      <div
        class="collapse-title text-xl font-medium"
      >
        Header 
        1
      </div>
      <div
        class="collapse-content"
      >
        <p>
          Body
        </p>
      </div>
    </div>
    <div
      class="collapse bg-base-200 accordion-type-plus join-item border border-base-300"
    >
      <input
        aria-label="Accordion item 3"
        name="test"
        type="checkbox"
      />
      <div
        class="collapse-title text-xl font-medium"
      >
        Header 
        2
      </div>
      <div
        class="collapse-content"
      >
        <p>
          Body
        </p>
      </div>
    </div>
    <div
      class="collapse bg-base-200 accordion-type-plus join-item border border-base-300"
    >
      <input
        aria-label="Accordion item 4"
        name="test"
        type="checkbox"
      />
      <div
        class="collapse-title text-xl font-medium"
      >
        Header 
        3
      </div>
      <div
        class="collapse-content"
      >
        <p>
          Body
        </p>
      </div>
    </div>
  </div>
</div>
`;
